# ros2-autonomous-waiter

./: .gitignore  README.md  first_map.data  get_order.py  magnet.py  mappp.posegraph  matt.data  maybe_better_map.data  mbot.uf2  the_map.yaml  waiter_setup.sh
autonomous_waiter_description/: CMakeLists.txt  package.xml
autonomous_waiter_description/config/: ekf.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml  my_controllers.yaml  nav2_params.yaml
autonomous_waiter_description/description/: autonomous_waiter_description.urdf  lidar.xacro  ros2_control.xacro
autonomous_waiter_description/hardware-interfaces/: pico.py
autonomous_waiter_description/launch/: camera.py  detect_order.py  display.launch.py  host.launch.py  just_rviz_launch.py  magnet.py  rpi.py  waiter.cpp  waiter.py
autonomous_waiter_description/publishers/: cmd_vel_publisher.cpp  odometry_twist_publisher.cpp
autonomous_waiter_description/src/description/: autonomous_waiter_description.urdf  ros2_control.xacro
autonomous_waiter_description/src/gpt/: pico.cpp  pico.py
autonomous_waiter_description/src/install/: local_setup.sh  setup.sh
autonomous_waiter_description/src/log/: latest_build
autonomous_waiter_description/subscribers/: cmd_vel_subscriber.cpp  odometry_twist_subscriber.cpp
